--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -4,9 +4,11 @@
 @import url('./__title/popup__title.css');
 @import url('./__form/popup__form.css');
 @import url('./__input/popup__input.css');
+@import url('./__input/error_text.css');
 @import url('./__button/popup__button.css');
 @import url('./__caption/popup__caption.css');
 @import url('./__image/popup__image.css');
+@import url('./__content/_content/popup__agree.css');
 
 .popup {
   font-family: 'Inter', Arial, sans-serif;
