--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,13 +1,43 @@
 .profile__image {
+  position: relative;
   width: 120px;
   height: 120px;
+  margin: 0 29px 0 0;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  background-size: cover;
+  background-image: url("/src/images/avatar.jpg");
   background-position: center;
-  margin: 0 29px 0 0;
-  background-image: url('/src/images/avatar.jpg');
+  background-size: cover;
+  cursor: pointer;
+}
+
+.profile__image:hover::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  opacity: 0.8;
+  background-color: #000;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.profile__image:hover::before {
+  content: "";
+  position: absolute;
+  top: calc(50% - 13px);
+  left: calc(50% - 13px);
+  z-index: 20;
+  width: 26px;
+  height: 26px;
+  background-image: url("../../../images/edit-icon.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 @media screen and (max-width: 740px) {
